--- a/index.html
+++ b/index.html
@@ -4,8 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github</title>
+    <link rel="stylesheet" href="./style.css" class="css">
 </head>
 <body>
-    <h1>Nerish</h1>
+    <div class="container">
+        <div class="navbar">
+            <div class="logo">
+                <img src="./img/bread.png" height="60px" width="100px" style="border-radius: 90%;">
+            </div>
+            <div class="details">
+                <a href="./index.html">Home</a>
+                <a href="./navbar.html">Gallery</a>
+                <a href="">About Us</a>
+                <a href="">News & Events</a>
+                <a href="">Login</a>
+            </div>
+        </div>
+        <div class="head">
+        <h1>Our Breads</h1>
+        </div>
+        <div class="breads">
+            <div class="box-1">
+                <div class="image-1">
+                    <img src="./img/white bread.jpg" height="200px" width="80%">
+                </div>
+                <div class="head-1">
+                <h2><b>White Bread</b></h2>
+                </div>
+                <div class="notes-1">
+                <p>Satisfactory white bread can be made from flour, water, salt, and yeast. (A “sourdough” addition may be substituted for commercial yeast.) Yeast-raised breads based on this simple mixture include Italian-style bread and French or Vienna breads.</p>
+                </div>
+            </div>
+            <div class="box-2">
+                <div class="image-2">
+                    <img src="./img/farming bread.jpg" height="200px" width="80%">
+                </div>
+                <div class="head-2">
+                <h2><b>Farming Bread</b></h2>
+                </div>
+                <div class="notes-2">
+                <p>In a large bowl combine the water, caraway seeds, yeast, salt, oil, syrup, and rye flour. Mix well until the salt has completely dissolved and the all the ingredients are evenly distributed. Add the white bread flour and mix to a dough.</p>
+                </div>
+            </div>
+            <div class="box-3">
+                <div class="image-3">
+                    <img src="./img/loaf bread.jpg" height="200px" width="80%">
+                </div>
+                <div class="head-3">
+                <h2><b>Loaf Bread</b></h2>
+                </div>
+                <div class="notes-3">
+                <p>A loaf of bread is bread which has been shaped and baked in one piece. It is usually large enough for more than one person and can be cut into slices.</p>
+                </div>
+            </div>
+            <div class="box-4">
+                <div class="image-4">
+                    <img src="./img/sourdough.jpg" height="200px" width="80%">
+                </div>
+                <div class="head-4">
+                <h2><b>Sourdough Bread</b></h2>
+                </div>
+                <div class="notes-4">
+                <p>Sourdough bread is made from flour, water and salt fermented using lactic acid bacteria and wild yeast. Sourdough bread is known in almost every country around the world. Each culture has a different name for it.</p>
+                </div>
+            </div>
+            <div class="box-5">
+                <div class="image-5">
+                    <img src="./img/olive bread.jpg" height="200px" width="80%">
+                </div>
+                <div class="head-5">
+                <h2><b>Olive Bread</b></h2>
+                </div>
+                <div class="notes-5">
+                <p>Olive bread is a bread laced with olives. It originated in Italy, where it is prepared using black salt-cured olives, green Spanish-style olives, and other types. Italian varieties are typically prepared with flour, butter and eggs as the bread's base.</p>
+                </div>
+            </div>
+            <div class="box-6">
+                <div class="image-6">
+                    <img src="./img/whole grain bread.jpg" height="200px" width="80%">
+                </div>
+                <div class="head-6">
+                <h2><b>Whole-Grain Bread</b></h2>
+                </div>
+                <div class="notes-6">
+                <p>In addition to wheat, whole grain bread can include other whole grains, such as whole barley, brown rice, whole grain oats, and rolled oats, among others (all of which are rich in fiber, vitamins, and minerals).</p>
+                </div>
+            </div>
+            <div class="box-7">
+                <div class="image-7">
+                    <img src="./img/gfgffg.jpg" height="200px" width="80%">
+                </div>
+                <div class="head-7">
+                <h2><b>Farming Bread</b></h2>
+                </div>
+                <div class="notes-7">
+                <p>In a large bowl combine the water, caraway seeds, yeast, salt, oil, syrup, and rye flour. Mix well until the salt has completely dissolved and the all the ingredients are evenly distributed. Add the white bread flour and mix to a dough.</p>
+                </div>
+            </div>
+            <div class="box-8">
+                <div class="image-8">
+                    <img src="./img/bougeette.jpg" height="200px" width="80%">
+                </div>
+                <div class="head-8">
+                <h2><b>Baguettte</b></h2>
+                </div>
+                <div class="notes-8">
+                <p>While most bread has a fairly high water content (usually around 40 percent), the water content of baguettes is much higher — usually about 50 percent. That gives baguettes their light and airy texture, which also means they dry out quickly.</p>
+                </div>
+            </div>
+        </div>
+        </div>
 </body>
 </html>
